test/files/pos/t7683-stop-after-parser/sample_2.scala
//> using options -Xplugin:. -Xplugin-require:timebomb -Ystop-after:parser
package sample

// just a sample that is compiled with the explosive plugin disabled
object Sample extends App {
}
