test/files/neg/t8755-regress-a/sample_2.scala
//> using options -Xplugin:. -Xplugin-require:"Testing phase assembly" -Vphases -Werror
package sample

// just a sample that is compiled with the sample plugin enabled
object Sample extends App {
}
